# None of these are expected to work
# Projects with nonstandard dependencies should go in here

if get_option('fskit-plugin')
    subdir('fskit')
endif

if get_option('fmi-plugin')
    subdir('fmi')
endif

if get_option('fncs-plugin')
    subdir('fncs')
endif

if get_option('helics-plugin')
    subdir('helics')
endif
