griddyn_fmi_inc = include_directories('fmi/include')
library('griddyn_fmi', [
        'fmi/fmi_import/fmiImport.cpp',
        'fmi/fmi_import/fmiInfo.cpp',
        'fmi/fmi_import/fmi2Object.cpp',
        'fmi/fmi_import/fmi2ModelExchangeObject.cpp',
        'fmi/fmi_import/fmi2CoSimObject.cpp',
        'fmi/fmi_import/fmiVariableSet.cpp',
        'fmi/fmi_import/fmiEnumDefinitions.cpp',
        'fmi/fmi_import/fmiLibraryManager.cpp',
        'fmi/fmiGDinfo.cpp',
        'fmi/fmi_models/fmiMESubModel.cpp',
        'fmi/fmi_models/fmiCoSimSubModel.cpp',
        'fmi/fmi_models/fmiMELoad.cpp',
        'fmi/fmi_models/fmiCoSimLoad.cpp',
        'fmi/fmi_models/fmiMELoad3phase.cpp',
        'fmi/fmi_models/fmiCoSimLoad3phase.cpp',
        'fmi/fmi_models/fmiExciter.cpp',
        'fmi/fmi_models/outputEstimator.cpp',
        'fmi/fmi_models/fmiGovernor.cpp',
        'fmi/fmi_models/fmiGenModel.cpp',
        'fmi/fmi_models/CymeDistLoad.cpp',
    ],
    dependencies : [
        griddyn_dep,
        griddyn_common_dep,
        griddyn_core_dep,
        griddyn_format_interpreter_dep,
        griddyn_utility_dep,
        griddyn_plugin_dep,
        jsoncpp_dep,
    ],
    include_directories : griddyn_fmi_inc)
