library('griddyn_fskit', [
        'fskit/fskitCommunicator.cpp',
        'fskit/fskitRunner.cpp',
        'fskit/gridDynFederatedScheduler.cpp',
        'fskit/GridDynFederatedSimulator.cpp',
        'fskit/gridDynfskit.cpp',
        'fskit/protection-message.cc',
        'fskit/zonalRelayLogicalProcess.cpp'
    ],
    dependencies : [
        griddyn_runner_dep,
        griddyn_dep,
        griddyn_core_dep,
    ])
