library('griddyn_helics', [
        'helics/helicsCollector.cpp',
        'helics/test/helicsTest.cpp',
        'helics/helicsSupport.cpp',
        'helics/helicsRunner.cpp',
        'helics/helicsLoad.cpp',
        'helics/helicsGhostBus.cpp',
        'helics/helicsSource.cpp',
        'helics/helicsCoordinator.cpp',
        'helics/helicsLibrary.cpp',
        'helics/helicsCommunicator.cpp',
    ],
    dependencies : [
        griddyn_core_dep,
    ])
